# AI_Football_highlight_generator

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
examples/: README.md
football_highlights/: __init__.py  __main__.py  cli.py  config.py  curation.py  detector.py  models.py  prompts.py  renderer.py  sampler.py
tests/: conftest.py  test_curation.py  test_detector.py  test_models.py  test_renderer.py
