[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "football-highlights"
version = "0.1.0"
description = "AI Football Highlight Generator - turn a full match into a highlight reel using multi-modal LLMs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Hamza" }]
dependencies = [
    "pydantic>=2.7,<3",
    "python-dotenv>=1.0",
    "ffmpeg-python>=0.2.0",
    "anthropic>=0.40.0",
    "httpx>=0.27",
    "click>=8.1",
    "tqdm>=4.66",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
football-highlights = "football_highlights.cli:main"

[tool.setuptools.packages.find]
include = ["football_highlights*"]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
